2007-02-21  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/ipsec_doi.c: block variable declaration before code
	  in ipsecdoi_id2str().
	
2007-02-20  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/{handler.c|isakmp_var.h}: updated delete_spd() calls.
	* src/racoon/isakmp.c: Only delete a generated SPD if it's
	  creation date matches the creation date of the SA we are
	  currently deleting.
	* src/racoon/{pfkey.c|isakmp_inf.c}: fills creation date of
	  generated SPDs.
	* src/racoon/policy.h: added 'created' var.
	* src/racoon/isakmp_inf.c: Removed a debug printf....

2007-02-19  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Removed a debug printf....

2007-02-16  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/ipsec_doi.c: Fixed a %zu in a printf. Reported by
	  Olivier Warin.
	
---------------------------------------------

	0.7.beta1 released

2007-02-15  Emmanuel Dreyfus  <manu@netbsd.org>
	* configure.ac: fix typo in SELinux option
	* src/racoon/security.c: missing file from Joy Latten

2007-02-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed the way phase1/2 messages are
	  sent/resent, to avoid zombie handles and acces to freed memory.
	* src/racoon/isakmp_inf.c: Just expire a ph1 handle when receiving
	  a DELETE-SA instead of calling purge_remote(). Reported by
	  "Uncle Pedro" on Sourceforge's bugtracker.

2007-02-02  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/cfparse.y: Fixed a check of NAT-T support in libipsec. 

2007-02-01  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: When receiving an Isakmp DELETE_SA,
	  gets the cookie of the SA to be deleted from payload instead of
	  just deleting the Isakmp SA used to protect the informational.
	  Problem reported by "unclepedro" on Sourceforge's bugtracker.

2006-12-18  Yvan Vanhullebus  <vanhu@netasq.com>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/crypto_openssl.c: fixed a memory leak
